client/src/App.css
@import url("./variables.css");
@font-face {
  font-family: Exo;
  src: url("./assets/fonts/Exo2-VariableFont_wght.ttf");
}

body {
  background-color: var(--main-color);
  color: var(--secondary-color);
  font-family: "Exo";
  line-height: 1.5rem;
  margin: 0;
  padding: 0;

  @media screen and (width >= 800px) {
    font-size: 1.25rem;
  }
}

.app-container {
  position: relative;
  min-height: calc(100vh - var(--footer-height));
  padding-bottom: var(--footer-height);
}

main {
  max-width: clamp(320px, 90%, 1800px);
  margin: auto;
}

img {
  max-width: 100%;
}

p {
  max-width: 80ch;
}

.logoContainer {
  display: flex;
  justify-content: center;
  padding-top: 1rem;
  margin: 0;

  img {
    max-height: 4rem;

    @media screen and (width >= 800px) {
      margin-top: 0;
      max-height: 6rem;
    }
  }
}

button[type="submit"] {
  font-family: "Exo";
}

/* https://github.com/fkhadra/react-toastify/issues/307#issuecomment-456821982 */
.Toastify__toast-body {
  font-family: "Exo";
}

.Toastify__toast-theme--colored.Toastify__toast--error {
  background-color: var(--red);
}

.form-error {
  margin: 0;
  color: var(--red);
  font-size: 0.725rem;
  max-width: 7.25rem;
}

/** Style commun aux liens de navigation */
a {
  text-decoration: none;
  color: var(--accent-color);
}
a:hover {
  text-decoration: underline dotted;
}

/** Style commun aux boutons de navigation */
.backButton {
  font-weight: bold;
  margin-top: 3em;
  margin-left: 1rem;
  padding: 4px 10px;
  background-color: var(--accent-color);
  border: 0.125rem solid var(--accent-color);
  border-radius: var(--medium-border-radius);
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 0.25rem;
}

a:has(> .backButton) {
  text-decoration: none;
}

/** Style pour les boutons de navigation de Swiper */
.swiper-button-prev,
.swiper-button-next {
  border: 1px solid transparent;
  border-radius: 8px;
  padding: 1px;
  background-color: rgba(0, 0, 0, 0.22);
}

